--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-owl-carousel": "^2.3.1",
+    "react-select": "^3.0.8",
     "typed.js": "^2.0.11"
   },
   "devDependencies": {
